# SiMpLE

./: .gitignore  Dockerfile  LICENSE  README.md
archive/src/: helper.cpp  helper.h
archive/usingOpenMP/: README.md  objectiveFunction.cpp  objectiveFunction.h
configs/: config_KITTI_offline.yaml  config_KITTI_online.yaml  config_MulRan.yaml  config_UrbanNav.yaml
cpp/: CMakeLists.txt
cpp/src/: ConfigParser.cpp  ConfigParser.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  PointCloud.cpp  PointCloud.hpp  PointMap.cpp  PointMap.hpp  Register.cpp  Register.hpp  main.cpp  nanoflannUtils.hpp  utils.cpp  utils.hpp
devkit/: README.md
devkit/src/: CMakeLists.txt  evaluate_odometry.cpp
devkit/testScripts/: evalKitti.sh  evalMulran.sh  evalUrbanNav.sh
plotResultsMATLAB/: interpretResults.m
sampleResults/KITTI/: README.md
sampleResults/KITTI/estimatesInGroundTruthFrame/offline/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  10.txt
sampleResults/KITTI/estimatesInGroundTruthFrame/online/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
sampleResults/KITTI/offline/estimateGroundTruthFrame/: 08.txt  09.txt
sampleResults/KITTI/offline/estimateVelodyneFrame/: 01  02  03  04  06  08  09  10
sampleResults/KITTI/online/estimateGroundTruthFrame/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
sampleResults/KITTI/online/estimateVelodyneFrame/: 00  01  02  03  04  05  06  07  08  09  10
sampleResults/KITTI/simpleOutputs/offline/: 00  00_config  01_config  02_config  03_config  04_config  05  05_config  07  (+5 more)
sampleResults/MulRan/: README.md
sampleResults/MulRan/groundTruth/: DCC_02.txt  DCC_03.txt  KAIST_01.txt  KAIST_02.txt  KAIST_03.txt  Riverside_01.txt
sampleResults/MulRan/groundTruthInSensorFrame/: DCC_01.txt  Riverside_02.txt  Riverside_03.txt
sampleResults/MulRan/ousterFrame/: DCC_01  DCC_02  DCC_03  KAIST_01  KAIST_02  KAIST_03  Riverside_01  Riverside_02  Riverside_03  Sejong_01  Sejong_02  Sejong_03
sampleResults/MulRan/simpleOutputs/: DCC_01  DCC_01_config  DCC_02  DCC_02_config  DCC_03  DCC_03_config  KAIST_01  KAIST_01_config  KAIST_02  KAIST_02_config  KAIST_03  KAIST_03_config  Riverside_01  Riverside_01_config  Riverside_02  Riverside_02_config  Riverside_03  Riverside_03_config  Sejong_01  Sejong_01_config  Sejong_02  Sejong_02_config  Sejong_03  Sejong_03_config
sampleResults/UQ/: README.md
sampleResults/UQ/sensorFrame/: Adventure1_backhalf  Adventure1_fronthalf  UQ_full_loop1
sampleResults/UQ/simpleOutputs/: Adventure1_backhalf  Adventure1_backhalf_config  Adventure1_fronthalf  Adventure1_fronthalf_config  UQ_full_loop1  UQ_full_loop1_config  UQ_full_loop1_halfRnew  UQ_full_loop1_halfRnew_config
sampleResults/UrbanNav/: README.md
sampleResults/UrbanNav/KITTI_format/: 2019-04-28-20-58-02  2020-03-14-16-45-35
sampleResults/UrbanNav/TUM_format/: TUM_2019_04_28_20_58_02.txt  TUM_2020_03_14_16_45_35.txt
sampleResults/UrbanNav/groundTruth/: novatel_data1_0314.txt  novatel_data2_0428.txt
sampleResults/UrbanNav/simpleOutputs/: 2019-04-28-20-58-02  2019-04-28-20-58-02_config  2020-03-14-16-45-35  2020-03-14-16-45-35_config
sampleResults/UrbanNav/tumFormat/: TUM_2019_04_28_20_58_02.txt  TUM_2020_03_14_16_45_35.txt
src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Map.cpp  Map.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  Register.cpp  Register.hpp  Scan.cpp  Scan.hpp  helper.cpp  helper.h  main.cpp  objectiveFunction.cpp  objectiveFunction.h  utils.cpp  utils.h  utils.hpp
usingOpenMP/: CMakeLists.txt
visualization/: README.md  requirements.txt
visualization/config/: config.yaml
visualization/src/: pc_viewer.py
(+22 files in other folders)
